--- a/src/guidemo/FXMLDocument.fxml
+++ b/src/guidemo/FXMLDocument.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -11,7 +14,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guidemo.FXMLDocumentController">
    <children>
-      <HBox prefHeight="300.0" prefWidth="400.0">
+      <HBox prefHeight="300.0" prefWidth="600.0">
          <children>
             <VBox prefHeight="300.0" prefWidth="200.0" spacing="10.0">
                <children>
@@ -40,6 +43,34 @@
                </children>
             </VBox>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
+      <VBox layoutX="401.0" layoutY="9.0" prefHeight="300.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <Label text="ComboBox Object">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="comboBox" onAction="#comboBoxWasUpdated" prefWidth="150.0" />
+            <Label fx:id="comboBoxLabel" lineSpacing="10.0" text="Label" />
+         </children>
+      </VBox>
+      <VBox layoutX="585.0" layoutY="14.0" prefHeight="300.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <Label text="RadioButton Objects">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="phpRadioButton" mnemonicParsing="false" onAction="#radioButtonChanged" text="PHP" />
+            <RadioButton fx:id="javaRadioButton" mnemonicParsing="false" onAction="#radioButtonChanged" text="Java" />
+            <RadioButton fx:id="cSharpRadioButton" mnemonicParsing="false" onAction="#radioButtonChanged" text="C#" />
+            <RadioButton fx:id="cPlusPlusRadioButton" mnemonicParsing="false" onAction="#radioButtonChanged" text="C++" />
+            <Label fx:id="radioButtonLabel" text="Label" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
