Added the ListView and TextArea objects

--- a/src/guidemo/FXMLDocument.fxml
+++ b/src/guidemo/FXMLDocument.fxml
@@ -102,6 +102,11 @@
                   <TextArea fx:id="golfTextArea" prefHeight="250.0" prefWidth="200.0" />
                </children>
             </VBox>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Button layoutX="88.0" layoutY="251.0" mnemonicParsing="false" onAction="#changeScreenButtonPushed" text="Go to Table View" />
+               </children>
+            </AnchorPane>
          </children>
       </HBox>
    </children>
