--- a/src/guidemo/ExampleOfTableView.fxml
+++ b/src/guidemo/ExampleOfTableView.fxml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="guidemo.ExampleOfTableViewController">
    <children>
-      <Label layoutX="40.0" layoutY="40.0" text="TableView Object">
-         <font>
-            <Font name="System Bold Italic" size="18.0" />
-         </font>
-      </Label>
       <Button layoutX="581.0" layoutY="560.0" mnemonicParsing="false" onAction="#changeScreenButtonPushed" text="Go Back to GUI Objects View" />
-      <TableView fx:id="tableView" layoutX="40.0" layoutY="73.0" prefHeight="324.0" prefWidth="361.0">
-        <columns>
-          <TableColumn fx:id="firstNameColumn" onEditCommit="#changeFirstNameCellEvent" prefWidth="131.0" text="First Name" />
-          <TableColumn fx:id="lastNameColumn" onEditCommit="#changeLastNameCellEvent" prefWidth="117.0" text="Last Name" />
-            <TableColumn fx:id="birthdayColumn" minWidth="0.0" prefWidth="110.0" text="Birthday" />
-        </columns>
-      </TableView>
+      <VBox prefHeight="332.0" prefWidth="473.0" spacing="10.0">
+         <children>
+            <Label text="TableView Object">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tableView" onMouseClicked="#userClickedOnTable" prefHeight="228.0" prefWidth="481.0">
+              <columns>
+                <TableColumn fx:id="firstNameColumn" onEditCommit="#changeFirstNameCellEvent" prefWidth="131.0" text="First Name" />
+                <TableColumn fx:id="lastNameColumn" onEditCommit="#changeLastNameCellEvent" prefWidth="117.0" text="Last Name" />
+                  <TableColumn fx:id="birthdayColumn" minWidth="0.0" prefWidth="110.0" text="Birthday" />
+              </columns>
+            </TableView>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <TextField fx:id="firstNameTextField" prefWidth="175.0" promptText="First Name" />
+                  <TextField fx:id="lastNameTextField" prefWidth="175.0" promptText="Last Name" />
+                  <DatePicker fx:id="birthdayDatePicker" prefWidth="175.0" promptText="Birthday" />
+               </children>
+            </HBox>
+            <HBox prefHeight="80.0" prefWidth="473.0" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#newPersonButtonPushed" prefWidth="175.0" text="Add New Person" />
+                  <Button mnemonicParsing="false" onAction="#deleteButtonPushed" prefWidth="175.0" text="Delete Person(s)" />
+                  <Button fx:id="detailedPersonViewButton" mnemonicParsing="false" onAction="#changeSceneToDetailedPersonView" text="Detailed Person View" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
