--- a/src/guidemo/ExampleOfTableView.fxml
+++ b/src/guidemo/ExampleOfTableView.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="guidemo.ExampleOfTableViewController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" stylesheets="@grey_theme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guidemo.ExampleOfTableViewController">
    <children>
       <Button layoutX="581.0" layoutY="560.0" mnemonicParsing="false" onAction="#changeScreenButtonPushed" text="Go Back to GUI Objects View" />
       <VBox prefHeight="332.0" prefWidth="473.0" spacing="10.0">
